
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct platform_device {int dummy; } ;


 int ENODEV ;
 int ohci_lh7a404_hc_driver ;
 int pr_debug (char*) ;
 scalar_t__ usb_disabled () ;
 int usb_hcd_lh7a404_probe (int *,struct platform_device*) ;

__attribute__((used)) static int ohci_hcd_lh7a404_drv_probe(struct platform_device *pdev)
{
 int ret;

 pr_debug ("In ohci_hcd_lh7a404_drv_probe");

 if (usb_disabled())
  return -ENODEV;

 ret = usb_hcd_lh7a404_probe(&ohci_lh7a404_hc_driver, pdev);
 return ret;
}
